2019-07-10  DJ Delorie  <dj@redhat.com>
	    Sergei Trofimovich <slyfox@inbox.ru>

	[BZ #24696]
	[BZ #24695]
	* nss/nss_db/db-open.c (internal_endent): Protect against NULL
	mappings.
	* nss/tst-nss-db-endgrent.c: New.
	* nss/tst-nss-db-endgrent.root: New.
	* nss/tst-nss-db-endpwent.c: New.
	* nss/tst-nss-db-endpwent.root: New.
	* nss/Makefile: Add new tests.
	* support/links-dso-program-c.c: Add selinux dependency.
	* support/links-dso-program.cc: Add selinux dependency.
	* support/Makefile: Build those with -lselinux if enabled.

2019-07-10  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* sysdeps/aarch64/dl-machine.h (elf_machine_runtime_setup): Remove the
	DT_AARCH64_VARIANT_PCS check.
	(elf_machine_lazy_rel): Use l_info[DT_AARCH64 (VARIANT_PCS)].
	* sysdeps/aarch64/linkmap.h (struct link_map_machine): Remove
	variant_pcs.

2019-07-10  Andreas Schwab  <schwab@suse.de>

	[BZ #23352]
	* malloc/malloc.h (__malloc_check_init): Don't declare.
	* include/malloc.h (__malloc_check_init): Likewise.
	* malloc/malloc-internal.h (__malloc_check_init): Declare it here.
	* manual/memory.texi (__malloc_check_init): Don't mention it.

2019-07-10  Mao Han  <han_mao@c-sky.com>

	* locale/Makefile: Fix tst-locale-locpath arguments passing.

2019-07-09  Paul A. Clarke  <pc@us.ibm.com>

	* sysdeps/powerpc/fpu/fenv_libc.h (_FPU_GET_RC): Protect use of
	__builtin_cpu_supports with __BUILTIN_CPU_SUPPORTS__.

2019-07-08  DJ Delorie  <dj@redhat.com>

	[BZ #23501]
	* io/ftw.c (process_entry): Fill in statbuf for dangling links.
	* io/tst-ftw-lnk.c: New test.
	* io/Makefile: Run it.

2019-07-08  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/powerpc/power7/fpu/s_logb.c: Move to ...
	* sysdeps/powerpc/fpu/s_logb.c: ... here.  Use inline FP constants.
	* sysdeps/powerpc/power7/fpu/s_logbf.c: Move to ...
	* sysdeps/powerpc/fpu/s_logbf.c: ... here.  Use inline FP constants.
	* sysdeps/powerpc/power7/fpu/s_logbl.c: Move to ...